--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name 'example.org';
     location / {
-        proxy_pass http://example.org:port/;
+        proxy_pass http://IP_or_NAME:port/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -22,7 +22,7 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     location / {
-        proxy_pass http://example.org:port/;
+        proxy_pass http://IP_or_NAME:port/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
